partial class AnimStates
{
    public static class Cat
    {
        public const string IS_IDLING = "isIdling";
        public const string IS_ATTACKING = "isAttacking";
        public const string IS_RUNNING = "isRunning";
        public const string IS_DEATH = "isDeath";
        public const string IS_JUMPING = "isJumping";
    }

    public static class Mouse
    {
        public const string IS_IDLING = "isIdling";
        public const string IS_RUNNING = "isRunning";
        public const string SURIKEN = "suriken";
        public const string DIE = "die";
        public const string JUMPING = "jumping";
        public const string FIREBALL = "fireball";
    }
}